fix text cutoff

--- a/src/Components/QuizScreen/SourceWord.css
+++ b/src/Components/QuizScreen/SourceWord.css
@@ -1,6 +1,7 @@
 .word-container {
     overflow: hidden;
     margin: 80px 0px;
+    padding: 8px 0;
 }
 
 .word {
